@@ -1,3 +1,14 @@
+2000-02-10  Per Bothner  <per@bothner.com>
+
+	* Type.java (mapNameToType):  New static replaces ClassType.classTable.
+	(lookupType, getType):  New static methods.
+	(make):  Use ArrayType.make.
+	* ArrayType.java (make):  New static method.
+	* ClassType.java (classTable):  Replaced by Type,mapNameToType.
+	(make):  Use Type.getType.
+	(getDeclaredMethod(String,int)):  New overloaded method.
+	(addMethods):  Also add constructore.
+
 2000-02-01  Per Bothner  <per@bothner.com>
 
 	* ClassType.java (getInterfaces):  Style tweaks.
